Добавление Kafka